updated android safe browsing, updated ios browser and SafariViewController options, added onSafeBrowsingHit event for android